<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="in.avimarine.rcrecorder.activities.RaceInputActivity">
  <item
    android:id="@+id/action_sortby_sail"
    android:orderInCategory="100"
    android:title="@string/action_sortby_sail"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_sortby_bow"
    android:orderInCategory="100"
    android:title="@string/action_sortby_bow"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_sortby_name"
    android:orderInCategory="100"
    android:title="@string/action_sortby_name"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_fleet_size"
    android:orderInCategory="100"
    android:title="@string/action_fleet_size"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never"/>
</menu>
