<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraintLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="in.avimarine.racecommittee.RaceInputActivity$RaceInputFragment">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:paddingBottom="70dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <RadioGroup
        android:id="@+id/btn_lbl_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
          android:id="@+id/identification_radio_sailno"
          android:text="@string/radio_sail_no"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:checked="true"/>
        <RadioButton
          android:id="@+id/identification_radio_bowno"
          android:text="@string/radio_bow_no"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>
        <RadioButton
          android:id="@+id/identification_radio_boatname"
          android:text="@string/radio_boat_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>
      </RadioGroup>
      <TableLayout
        android:id="@+id/boatsButtonTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">
        <!--Content added at runtime-->
      </TableLayout>
    </LinearLayout>
  </ScrollView>

</android.support.constraint.ConstraintLayout>